fixed food menu

--- a/ws.css
+++ b/ws.css
@@ -85,7 +85,7 @@ h1,h2
  h2 {
     /* margin: 0;
     font-size: 10vw; */
-    font-family: 'Cormorant Garamond', serif; /* Elegant serif font */
+    font-family:  serif; /* Elegant serif font */
     font-size: 2.5rem; /* Adjust size */
     font-weight: 700; /* Bold text */
     color: #D2691E; /* Warm, autumnal brown color */
