--- a/foodmenu.css
+++ b/foodmenu.css
@@ -70,9 +70,9 @@ header li.active, header li:hover{
 .btn {
     position: absolute;
     /* bottom:5%; */
-    top:43%;
-    left: 20%;
-    width:40%;
+    top:27%;
+    left: 15%;
+    /* width:40%; */
     /* transform: translateX(-50%,-50%); */
     background: linear-gradient(to right, #5a5a5a, #1e1e1e, #5a5a5a); /* Subtle metallic gradient */
     color: #f0f0f0; /* Light text for contrast */
@@ -86,14 +86,15 @@ header li.active, header li:hover{
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4), 0 4px 6px rgba(255, 255, 255, 0.1); 
     transition: all 0.3s ease;
     cursor: pointer;
+
+    display: inline-block;
 }
 
-.btn:hover {
+/* .btn:hover {
     background: linear-gradient(to right, #3b3b3b, #101010, #3b3b3b); 
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.6), 0 4px 8px rgba(255, 255, 255, 0.2); 
     /* transform: translateX(-40%) translateY(-2px);  */
      /* transform: translate(0%, -40%); */ 
-}
 
 .btn:active {
     background: linear-gradient(to right, #2b2b2b, #000000, #2b2b2b); 
