--- a/foodmenu.css
+++ b/foodmenu.css
@@ -76,7 +76,7 @@ header li.active, header li:hover{
     /* transform: translateX(-50%,-50%); */
     background: linear-gradient(to right, #5a5a5a, #1e1e1e, #5a5a5a); /* Subtle metallic gradient */
     color: #f0f0f0; /* Light text for contrast */
-    padding: 10px 8px;
+    padding: 6px 8px;
     border: 1px solid #333;
     border-radius: 20px; /* Smooth corners */
     font-size: 14px;
@@ -103,6 +103,41 @@ header li.active, header li:hover{
     transform: translate(0%, -40%);
 }
 
+.btn2 {
+    position: absolute;
+    /* bottom:5%; */
+    top:27%;
+    left: 40%;
+    /* width:40%; */
+    /* transform: translateX(-50%,-50%); */
+    background: linear-gradient(to right, #5a5a5a, #1e1e1e, #5a5a5a); /* Subtle metallic gradient */
+    color: #f0f0f0; /* Light text for contrast */
+    padding: 6px 8px;
+    border: 1px solid #333;
+    border-radius: 20px; /* Smooth corners */
+    font-size: 14px;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-decoration: none;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4), 0 4px 6px rgba(255, 255, 255, 0.1); 
+    transition: all 0.3s ease;
+    cursor: pointer;
+
+    display: inline-block;
+}
+
+/* .btn:hover {
+    background: linear-gradient(to right, #3b3b3b, #101010, #3b3b3b); 
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.6), 0 4px 8px rgba(255, 255, 255, 0.2); 
+    /* transform: translateX(-40%) translateY(-2px);  */
+     /* transform: translate(0%, -40%); */ 
+
+.btn2:active {
+    background: linear-gradient(to right, #2b2b2b, #000000, #2b2b2b); 
+    box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.6), inset 0 1px 3px rgba(255, 255, 255, 0.1); 
+    /* transform: translateX(-40%) translateY(2px);  */
+    transform: translate(0%, -40%);
+}
 
 
 .images{
